--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         #parallax-2 {
             width: 100%;
-            height: 10vh;
+            height: 100%;
             background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('blackhole2.jpg');
             background-position: center;
             background-size: cover;
@@ -76,14 +76,18 @@
     </div>
 
     <div class="px-16" id="description">
-        <h1 class="mb-4 text-3xl font-extrabold py-5">We invest in the worlds potential</h1>
+        <div class="bg-transparant w-full h-8">
+            <div class="absolute -bottom-10 left-1/2 -translate-x-1/2 bg-gray-300 shadow px-10 py-10 w-80 lg:w-auto rounded-lg text-slate-500 mt-16">
+            <h3 class="font-extrabold text-base text-5xl">Lorem, ipsum dolor.</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et sunt itaque velit, fugit provident dolores?</p>
+            </div>        
+        </div> 
+        <h1 class="mb-4 text-3xl font-extrabold py-7">We invest in the worlds potential</h1>
         <p class="py-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis minima alias omnis sint at eveniet, quibusdam nam. Pariatur rerum nobis odit ex voluptatum, voluptate reiciendis adipisci quia? Quaerat officia natus voluptates veniam obcaecati sunt, hic porro. Veritatis ut repudiandae culpa, sed, odit maxime quidem dignissimos velit dolore recusandae eveniet vero. Sunt nobis, odit sapiente et vel porro? Doloribus minima sit velit numquam? Ex eos aspernatur iste, aliquid unde, sit excepturi adipisci corrupti rerum doloribus harum vel magni quis quos veniam ullam facere quisquam sed qui delectus maxime! Vitae quas, neque aut voluptate ratione officiis eius. Officia dolorum veniam quidem nam.
         </p>
     </div>
 
-    <div id="parallax-2" class="flex justify-center items-center h-screen"></div>
-
-    <section style="background-color: gray;">
+    <section id="parallax-2">
         <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-16">
             <div class="mx-auto max-w-2xl md:text-center">
                 <h1 class="mb-4 text-5xl font-extrabold py-5" style="color: white;">Testimonials</h1>
@@ -106,7 +110,7 @@
                                         <div class="font-display text-base text-slate-900">Muhammad Ibnu Rojab</div>
                                         <div class="mt-1 text-sm text-slate-500">CEO at Lynch LLC</div>
                                     </div>
-                                    <div class="overflow-hidden rounded-full bg-slate-50"><img src="blackhole.jpg" loading="lazy"
+                                    <div class="overflow-hidden rounded-full bg-slate-50"><img src="https://tse3.mm.bing.net/th?id=OIP.WsUddRZklT_8m4MEz2bt6gHaJ4&pid=Api&P=0&h=220" loading="lazy"
                                             width="56" height="56" decoding="async" data-nimg="1"
                                             class="h-14 w-14 object-cover" style="color:transparent">
                                     </div>
@@ -128,7 +132,7 @@
                                         <div class="mt-1 text-sm text-slate-500">Director at Velocity Industries
                                         </div>
                                     </div>
-                                    <div class="overflow-hidden rounded-full bg-slate-50"><img src="blackhole2.jpg" loading="lazy"
+                                    <div class="overflow-hidden rounded-full bg-slate-50"><img src="https://tse3.mm.bing.net/th?id=OIP.1-R1pwH9g8vzZH0ax7hHWAHaLI&pid=Api&P=0&h=220" loading="lazy"
                                             width="56" height="56" decoding="async" data-nimg="1"
                                             class="h-14 w-14 object-cover" style="color:transparent">
                                     </div>
@@ -149,7 +153,7 @@
                                         <div class="font-display text-base text-slate-900">Ahmad Firman Gani</div>
                                         <div class="mt-1 text-sm text-slate-500">Founder of West Inc</div>
                                     </div>
-                                    <div class="overflow-hidden rounded-full bg-slate-50"><img src="blackhole2.jpg" loading="lazy"
+                                    <div class="overflow-hidden rounded-full bg-slate-50"><img src="https://tse3.mm.bing.net/th?id=OIP.HTe70onlg25ssp54d2nsDAHaLE&pid=Api&P=0&h=220" loading="lazy"
                                             width="56" height="56" decoding="async" data-nimg="1"
                                             class="h-14 w-14 object-cover" style="color:transparent">
                                     </div>
@@ -174,7 +178,7 @@
                                         <div class="font-display text-base text-slate-900">Hilya Nihla Nafila</div>
                                         <div class="mt-1 text-sm text-slate-500">Founder of Kiehn and Sons</div>
                                     </div>
-                                    <div class="overflow-hidden rounded-full bg-slate-50"><img src="blackhole2.jpg" loading="lazy"
+                                    <div class="overflow-hidden rounded-full bg-slate-50"><img src="https://tse1.mm.bing.net/th?id=OIP.DaCvZWes4qUkTmiKn3L_BQHaL_&pid=Api&P=0&h=220" loading="lazy"
                                             width="56" height="56" decoding="async" data-nimg="1"
                                             class="h-14 w-14 object-cover" style="color:transparent">
                                     </div>
@@ -195,7 +199,7 @@
                                         <div class="font-display text-base text-slate-900">Nuni Nurhaliza</div>
                                         <div class="mt-1 text-sm text-slate-500">COO at Armstrong Inc</div>
                                     </div>
-                                    <div class="overflow-hidden rounded-full bg-slate-50"><img src="blackhole.jpg" loading="lazy"
+                                    <div class="overflow-hidden rounded-full bg-slate-50"><img src="https://tse3.mm.bing.net/th?id=OIP.n9LkO5SjR29Y5KK-y8cWMwHaJQ&pid=Api&P=0&h=220" loading="lazy"
                                             width="56" height="56" decoding="async" data-nimg="1"
                                             class="h-14 w-14 object-cover" style="color:transparent">
                                     </div>
@@ -222,7 +226,7 @@
                                         <div class="font-display text-base text-slate-900">Peter Renolds</div>
                                         <div class="mt-1 text-sm text-slate-500">Founder of West Inc</div>
                                     </div>
-                                    <div class="overflow-hidden rounded-full bg-slate-50"><img src="blackhole2.jpg" loading="lazy"
+                                    <div class="overflow-hidden rounded-full bg-slate-50"><img src="https://tse4.mm.bing.net/th?id=OIP.fHIYfb26YFkUHvi7J8NDDAHaLH&pid=Api&P=0&h=220" loading="lazy"
                                             width="56" height="56" decoding="async" data-nimg="1"
                                             class="h-14 w-14 object-cover" style="color:transparent">
                                     </div>
@@ -246,7 +250,7 @@
                                         <div class="mt-1 text-sm text-slate-500">Director at Velocity Industries
                                         </div>
                                     </div>
-                                    <div class="overflow-hidden rounded-full bg-slate-50"><img src="blackhole.jpg" loading="lazy"
+                                    <div class="overflow-hidden rounded-full bg-slate-50"><img src="https://tse3.mm.bing.net/th?id=OIP.MI2ccxNZZfhKUl4Fi5ZzfwHaIk&pid=Api&P=0&h=220" loading="lazy"
                                             width="56" height="56" decoding="async" data-nimg="1"
                                             class="h-14 w-14 object-cover" style="color:transparent">
                                     </div>
