--- a/library.html
+++ b/library.html
@@ -18,20 +18,173 @@
             background-size: cover;
             background-attachment: fixed;
         }
+
+        .carousel-container {
+            perspective: 1000px;
+            touch-action: pan-y pinch-zoom;
+        }
+
+        .carousel-track {
+            transform-style: preserve-3d;
+            transition: transform 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+        }
+
+        .carousel-item {
+            backface-visibility: hidden;
+            transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+        }
+
+        .carousel-item.active {
+            opacity: 1;
+            transform: scale(1) translateZ(0);
+        }
+
+        @media (max-width: 640px) {
+            .carousel-item.prev {
+                opacity: 0;
+                transform: scale(0.8) translateX(-50%) translateZ(-100px);
+            }
+
+            .carousel-item.next {
+                opacity: 0;
+                transform: scale(0.8) translateX(50%) translateZ(-100px);
+            }
+        }
+
+        @media (min-width: 641px) {
+            .carousel-item.prev {
+                opacity: 0.7;
+                transform: scale(0.9) translateX(-100%) translateZ(-100px);
+            }
+
+            .carousel-item.next {
+                opacity: 0.7;
+                transform: scale(0.9) translateX(100%) translateZ(-100px);
+            }
+        }
+
+        .carousel-item.hidden {
+            opacity: 0;
+            transform: scale(0.8) translateZ(-200px);
+        }
+
+        .nav-button {
+            transition: all 0.3s;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(8px);
+            -webkit-backdrop-filter: blur(8px);
+        }
+
+        @media (hover: hover) {
+            .nav-button:hover {
+                background: rgba(255, 255, 255, 0.2);
+                transform: scale(1.1);
+            }
+        }
+
+        .nav-button:active {
+            transform: scale(0.95);
+        }
+
+        .progress-bar {
+            transition: width 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+        }
     </style>
 </head>
-<body id="parallax" class="p-8">
+<body class="bg-white p-8">
     <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a href="index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo">
             <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
         </a>
-        <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-            <input type="text" id="search" placeholder="Cari e-book..." class="p-2 w-full border rounded w-1/2" onkeyup="searchBooks()">
+        <div class="items-center justify-between flex w-auto md:w-auto md:order-1" id="navbar-sticky">
+            <div class="relative w-full p-2">
+                <input type="text" id="search" placeholder="Cari e-book..." class="p-2 w-full border rounded pl-10" onkeyup="searchBooks()">
+                <span class="absolute top-1/2 left-3 -translate-y-1/2">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-500" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816a1 1 0 01-1.414-1.414L7.94 9.94a1 1 0 012 0l4.816 4.816a1 1 0 01-1.414 1.414l-4.816-4.816a1 1 0 01-1.414-1.414L2.83 8.7a1 1 0 01-2 0l4.817 4.817a1 1 0 01-1.414 1.414L2 14.17a1 1 0 01-2 0l4.816-4.816a6 6 0 010-8.95z" clip-rule="evenodd" />
+                    </svg>
+                </span>
+            </div>
         </div>
         </div>
     </nav>
+
+    <!-- Main container -->
+    <div class="w-full max-w-6xl mx-auto mt-20">
+        <!-- Carousel container -->
+        <div class="carousel-container relative">
+            <!-- Progress bar -->
+            <div class="absolute top-0 left-0 right-0 h-1 bg-white/10 rounded-full overflow-hidden z-20">
+                <div class="progress-bar absolute top-0 left-0 h-full w-1/3"></div>
+            </div>
+
+            <!-- Navigation buttons -->
+            <button class="nav-button absolute left-2 sm:left-4 top-1/2 -translate-y-1/2 w-10 h-10 sm:w-12 sm:h-12 rounded-full flex items-center justify-center z-20 text-white touch-manipulation" onclick="prevSlide()" title="Previous slide">
+                <svg class="w-5 h-5 sm:w-6 sm:h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
+                </svg>
+            </button>
+            
+            <button class="nav-button absolute right-2 sm:right-4 top-1/2 -translate-y-1/2 w-10 h-10 sm:w-12 sm:h-12 rounded-full flex items-center justify-center z-20 text-white touch-manipulation" onclick="nextSlide()" title="Next slide">
+                <svg class="w-5 h-5 sm:w-6 sm:h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                </svg>
+            </button>
+
+            <!-- Carousel track -->
+            <div class="carousel-track relative h-[400px] sm:h-[500px] md:h-[600px] overflow-hidden">
+                <!-- Carousel items -->
+                <div class="carousel-item active absolute top-0 left-0 w-full h-full">
+                    <div class="w-full h-full p-4 sm:p-8">
+                        <div class="w-full h-full rounded-xl sm:rounded-2xl overflow-hidden relative group">
+                            <img src="https://wallpapercave.com/wp/wp2051780.jpg" alt="Geometric art installation" class="absolute inset-0 w-full h-full object-cover transition-transform duration-500 group-hover:scale-110" />
+                            <div class="absolute inset-0 bg-gradient-to-br from-violet-500/40 to-purple-500/40 mix-blend-overlay"></div>
+                            <div class="absolute inset-x-0 bottom-0 p-4 sm:p-8 bg-gradient-to-t from-black/80 via-black/40 to-transparent">
+                                <h3 class="text-white text-xl sm:text-2xl md:text-3xl font-bold mb-2 sm:mb-3">Digital Prism</h3>
+                                <p class="text-gray-200 text-sm sm:text-base md:text-lg max-w-2xl">Where geometry meets art in a stunning display of light and form.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item next absolute top-0 left-0 w-full h-full">
+                    <div class="w-full h-full p-4 sm:p-8">
+                        <div class="w-full h-full rounded-xl sm:rounded-2xl overflow-hidden relative group">
+                            <img src="https://cdn.wallpapersafari.com/36/47/e9McX3.jpg" alt="Futuristic tech setup" class="absolute inset-0 w-full h-full object-cover transition-transform duration-500 group-hover:scale-110" />
+                            <div class="absolute inset-0 bg-gradient-to-br from-fuchsia-500/40 to-pink-500/40 mix-blend-overlay"></div>
+                            <div class="absolute inset-x-0 bottom-0 p-4 sm:p-8 bg-gradient-to-t from-black/80 via-black/40 to-transparent">
+                                <h3 class="text-white text-xl sm:text-2xl md:text-3xl font-bold mb-2 sm:mb-3">Tech Haven</h3>
+                                <p class="text-gray-200 text-sm sm:text-base md:text-lg max-w-2xl">Immerse yourself in the cutting edge of technology and innovation.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item hidden absolute top-0 left-0 w-full h-full">
+                    <div class="w-full h-full p-4 sm:p-8">
+                        <div class="w-full h-full rounded-xl sm:rounded-2xl overflow-hidden relative group">
+                            <img src="https://cdn.wallpapersafari.com/93/90/cW8kGC.jpg" alt="Abstract digital art" class="absolute inset-0 w-full h-full object-cover transition-transform duration-500 group-hover:scale-110" />
+                            <div class="absolute inset-0 bg-gradient-to-br from-pink-500/40 to-rose-500/40 mix-blend-overlay"></div>
+                            <div class="absolute inset-x-0 bottom-0 p-4 sm:p-8 bg-gradient-to-t from-black/80 via-black/40 to-transparent">
+                                <h3 class="text-white text-xl sm:text-2xl md:text-3xl font-bold mb-2 sm:mb-3">Neural Dreams</h3>
+                                <p class="text-gray-200 text-sm sm:text-base md:text-lg max-w-2xl">AI-generated masterpieces that blur the line between human and machine creativity.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Indicators -->
+            <div class="absolute bottom-2 sm:bottom-4 left-1/2 -translate-x-1/2 flex gap-1 sm:gap-2 z-20">
+                <button class="w-8 sm:w-12 h-1 sm:h-1.5 rounded-full bg-white/40 hover:bg-white/60 transition-colors" title="Go to slide 1"></button>
+                <button class="w-8 sm:w-12 h-1 sm:h-1.5 rounded-full bg-white/20 hover:bg-white/60 transition-colors" title="Go to slide 2"></button>
+                <button class="w-8 sm:w-12 h-1 sm:h-1.5 rounded-full bg-white/20 hover:bg-white/60 transition-colors" title="Go to slide 3"></button>
+            </div>
+        </div>
+    </div>
+
 
     <div class="max-w-5xl mx-auto text-center py-16">
         <div id="bookList" class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mb-6 py-4">
@@ -177,6 +330,97 @@
             { title: "", author: "Author 5", link: "", preview: "" },
         ];
 
+        
+        let currentSlide = 0;
+        const slides = document.querySelectorAll('.carousel-item');
+        const indicators = document.querySelectorAll('.bottom-2 button, .bottom-4 button');
+        const progressBar = document.querySelector('.progress-bar');
+        let autoAdvanceTimer;
+        let touchStartX = 0;
+        let touchEndX = 0;
+        const carousel = document.querySelector('.carousel-track');
+
+        // Add touch events for swipe
+        carousel.addEventListener('touchstart', e => {
+            touchStartX = e.changedTouches[0].screenX;
+        }, { passive: true });
+
+        carousel.addEventListener('touchend', e => {
+            touchEndX = e.changedTouches[0].screenX;
+            handleSwipe();
+        }, { passive: true });
+
+        function handleSwipe() {
+            const swipeThreshold = 50;
+            const diff = touchStartX - touchEndX;
+
+            if (Math.abs(diff) > swipeThreshold) {
+                if (diff > 0) {
+                    nextSlide();
+                } else {
+                    prevSlide();
+                }
+            }
+        }
+
+        function updateSlides() {
+            slides.forEach((slide, index) => {
+                slide.className = 'carousel-item absolute top-0 left-0 w-full h-full';
+                if (index === currentSlide) {
+                    slide.classList.add('active');
+                } else if (index === (currentSlide + 1) % slides.length) {
+                    slide.classList.add('next');
+                } else if (index === (currentSlide - 1 + slides.length) % slides.length) {
+                    slide.classList.add('prev');
+                } else {
+                    slide.classList.add('hidden');
+                }
+            });
+
+            // Update indicators
+            indicators.forEach((indicator, index) => {
+                indicator.className = `w-8 sm:w-12 h-1 sm:h-1.5 rounded-full transition-colors ${
+                    index === currentSlide ? 'bg-white/40' : 'bg-white/20'
+                } hover:bg-white/60`;
+            });
+
+            // Update progress bar
+            progressBar.style.width = `${((currentSlide + 1) / slides.length) * 100}%`;
+        }
+
+        function resetAutoAdvance() {
+            clearInterval(autoAdvanceTimer);
+            autoAdvanceTimer = setInterval(nextSlide, 5000);
+        }
+
+        function nextSlide() {
+            currentSlide = (currentSlide + 1) % slides.length;
+            updateSlides();
+            resetAutoAdvance();
+        }
+
+        function prevSlide() {
+            currentSlide = (currentSlide - 1 + slides.length) % slides.length;
+            updateSlides();
+            resetAutoAdvance();
+        }
+
+        // Add click handlers to indicators
+        indicators.forEach((indicator, index) => {
+            indicator.addEventListener('click', () => {
+                currentSlide = index;
+                updateSlides();
+                resetAutoAdvance();
+            });
+        });
+
+        // Initialize auto advance
+        resetAutoAdvance();
+
+        // Initialize slides
+        updateSlides();
+
+
         function displayBooks(filteredBooks) {
             const bookList = document.getElementById("bookList");
             bookList.innerHTML = "";
@@ -188,7 +432,7 @@
 
             filteredBooks.forEach(book => {
                 const bookCard = document.createElement("div");
-                bookCard.className = "bg-gray-700 p-4 rounded-lg shadow flex flex-col items-center text-center";
+                bookCard.className = "bg-white p-4 rounded-lg shadow flex flex-col items-center text-center";
                 bookCard.innerHTML = `
                     <img src="${book.preview}" alt="${book.title}" class="w-32 h-40 object-cover mb-2 rounded">
                     <h2 class="text-lg font-semibold">${book.title}</h2>
