--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     </div>
 
     <div class="px-16" id="description">
-        <div class="bg-transparant w-full h-8">
-            <div class="absolute -bottom-10 left-1/2 -translate-x-1/2 bg-gray-300 shadow px-10 py-10 w-80 lg:w-auto rounded-lg text-slate-500 mt-16">
+        <div class="bg-transparant w-full h-32">
+            <div class="absolute -bottom-10 left-1/2 -translate-x-1/2 bg-gray-300 shadow px-10 py-10 w-80 lg:w-auto rounded-lg text-slate-500 mt-32">
             <h3 class="font-extrabold text-base text-5xl">Lorem, ipsum dolor.</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et sunt itaque velit, fugit provident dolores?</p>
             </div>        
@@ -89,9 +89,6 @@
 
     <section id="parallax-2">
         <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-16">
-            <div class="mx-auto max-w-2xl md:text-center">
-                <h1 class="mb-4 text-5xl font-extrabold py-5" style="color: white;">Testimonials</h1>
-            </div>
             <ul role="list"
                 class="mx-auto mt-6 grid max-w-2xl grid-cols-1 gap-6 sm:gap-8 lg:max-w-none lg:grid-cols-3">
                 <li>
@@ -223,7 +220,7 @@
                                 <figcaption
                                     class="relative mt-6 flex items-center justify-between border-t border-slate-100 pt-6">
                                     <div>
-                                        <div class="font-display text-base text-slate-900">Peter Renolds</div>
+                                        <div class="font-display text-base text-slate-900">Natasya Nur Eki Pratiwi</div>
                                         <div class="mt-1 text-sm text-slate-500">Founder of West Inc</div>
                                     </div>
                                     <div class="overflow-hidden rounded-full bg-slate-50"><img src="https://tse4.mm.bing.net/th?id=OIP.fHIYfb26YFkUHvi7J8NDDAHaLH&pid=Api&P=0&h=220" loading="lazy"
@@ -246,7 +243,7 @@
                                 <figcaption
                                     class="relative mt-6 flex items-center justify-between border-t border-slate-100 pt-6">
                                     <div>
-                                        <div class="font-display text-base text-slate-900">Amy Hahn</div>
+                                        <div class="font-display text-base text-slate-900">Ananda Putri Nur Hasannah</div>
                                         <div class="mt-1 text-sm text-slate-500">Director at Velocity Industries
                                         </div>
                                     </div>
@@ -263,9 +260,8 @@
         </div>
     </section>
 
-    <footer class="fixed bottom-0 left-0 z-20 w-full p-2 bg-white shadow-sm md:flex md:items-center md:justify-between md:p-4 dark:bg-gray-800">
-        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="https://flowbite.com/" class="hover:underline">Flowbite™</a>. All Rights Reserved.
-        </span>
+    <footer class="bottom-0 left-0 z-20 w-full p-2 bg-white shadow-sm md:flex md:items-center md:justify-between md:p-4 dark:bg-gray-800">
+        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">&copy; 2023 <a href="https://flowbite.com/" class="hover:underline">Flowbite&trade;</a>. All Rights Reserved.</span>
     </footer>
 </body>
 </html>
