--- a/index.html
+++ b/index.html
@@ -34,6 +34,44 @@
             background-color: gray;
             color: aliceblue;
         }
+
+        @media (max-width: 768px) {
+            
+            .text-5xl {
+                font-size: 24px;
+            }
+            .text-3xl {
+                font-size: 18px;
+            }
+            .px-10 {
+                padding: 10px;
+            }
+            .py-10 {
+                padding: 10px;
+            }
+            .w-80 {
+                width: 100%;
+            }
+            .lg:w-auto {
+                width: 100%;
+            }
+            .mt-32 {
+                margin-top: 16px;
+            }
+            
+            .absolute {
+                position: relative;
+            }
+            .-bottom-10 {
+                bottom: 0;
+            }
+            .left-1/2 {
+                left: 0;
+            }
+            .-translate-x-1/2 {
+                transform: none;
+            }
+        }
     </style>
 </head>
 <body>
@@ -78,8 +116,8 @@
     <div class="px-16" id="description">
         <div class="bg-transparant w-full h-16">
             <div class="absolute -bottom-10 left-1/2 -translate-x-1/2 bg-gray-300 shadow px-10 py-10 w-80 lg:w-auto rounded-lg text-slate-500 mt-32">
-            <h3 class="font-extrabold text-base text-5xl">Lorem, ipsum dolor.</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et sunt itaque velit, fugit provident dolores?</p>
+                <h3 class="font-extrabold text-base text-5xl">Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et sunt itaque velit, fugit provident dolores?</p>
             </div>        
         </div> 
         <h1 class="mb-4 text-3xl font-extrabold py-7">We invest in the worlds potential</h1>
