--- a/library.html
+++ b/library.html
@@ -192,9 +192,8 @@
         </div>
     </div>
 
-    <footer class="fixed bottom-0 left-0 z-20 w-full p-2 bg-white shadow-sm md:flex md:items-center md:justify-between md:p-4 dark:bg-gray-800">
-        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="https://flowbite.com/" class="hover:underline">Flowbite™</a>. All Rights Reserved.
-        </span>
+    <footer class="bottom-0 left-0 z-20 w-full p-2 bg-white shadow-sm md:flex md:items-center md:justify-between md:p-4 dark:bg-gray-800">
+        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">&copy; 2023 <a href="https://flowbite.com/" class="hover:underline">Flowbite&trade;</a>. All Rights Reserved.</span>
     </footer>
 
     
